WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114283
[BlackBerry] InputHandler: fix calls to HTMLInputElement methods
https://bugs.webkit.org/show_bug.cgi?id=114283
Summary
[BlackBerry] InputHandler: fix calls to HTMLInputElement methods
Alberto Garcia
Reported
2013-04-09 06:48:19 PDT
Some calls to methods from HTMLInputElement have to be renamed from isXXXControl() to isXXXField().
Attachments
Patch
(2.05 KB, patch)
2013-04-09 06:53 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-04-09 06:53:49 PDT
Created
attachment 197099
[details]
Patch
Rob Buis
Comment 2
2013-04-09 07:01:38 PDT
Comment on
attachment 197099
[details]
Patch LGTM.
WebKit Commit Bot
Comment 3
2013-04-09 07:45:54 PDT
The commit-queue encountered the following flaky tests while processing
attachment 197099
[details]
: platform/mac/editing/deleting/deletionUI-single-instance.html
bug 114181
(author:
rniwa@webkit.org
) transitions/color-transition-rounding.html
bug 114182
(author:
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-svg-length.html
bug 114183
(author:
peter@chromium.org
) transitions/interrupt-zero-duration.html
bug 114184
(authors:
cmarrin@apple.com
,
rniwa@webkit.org
, and
simon.fraser@apple.com
) transitions/multiple-background-transitions.html
bug 114185
(author:
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-color.html
bug 114186
(author:
peter@chromium.org
) transitions/multiple-shadow-transitions.html
bug 114187
(author:
simon.fraser@apple.com
) transitions/mismatched-shadow-transitions.html
bug 114188
(author:
simon.fraser@apple.com
) transitions/color-transition-all.html
bug 114189
(authors:
ossy@webkit.org
and
simon.fraser@apple.com
) transitions/shorthand-transitions.html
bug 114289
(authors:
jparent@google.com
and
simon.fraser@apple.com
) transitions/negative-delay.html
bug 114190
(author:
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-shadow.html
bug 114191
(author:
peter@chromium.org
) transitions/min-max-width-height-transitions.html
bug 114192
(author:
simon.fraser@apple.com
) transitions/cancel-transition.html
bug 114193
(authors:
ojan@chromium.org
,
rniwa@webkit.org
, and
simon.fraser@apple.com
) transitions/border-radius-transition.html
bug 114194
(author:
simon.fraser@apple.com
) transitions/flex-transitions.html
bug 114195
(author:
tony@chromium.org
) transitions/mixed-type.html
bug 114196
(author:
mikelawther@chromium.org
) transitions/multiple-mask-transitions.html
bug 114197
(author:
simon.fraser@apple.com
) transitions/color-transition-premultiplied.html
bug 114198
(author:
simon.fraser@apple.com
) transitions/mismatched-shadow-styles.html
bug 114199
(author:
simon.fraser@apple.com
) transitions/mask-transitions.html
bug 114200
(authors:
ojan@chromium.org
,
oliver@apple.com
, and
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-length.html
bug 114201
(author:
peter@chromium.org
) transitions/multiple-background-size-transitions.html
bug 114202
(authors:
mitz@webkit.org
and
simon.fraser@apple.com
) transitions/clip-transition.html
bug 114203
(authors:
dglazkov@chromium.org
and
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-transform.html
bug 114204
(author:
peter@chromium.org
) transitions/shorthand-border-transitions.html
bug 114205
(authors:
ojan@chromium.org
and
simon.fraser@apple.com
) transitions/interrupted-accelerated-transition.html
bug 56242
(authors:
rniwa@webkit.org
,
simon.fraser@apple.com
, and
tonyg@chromium.org
) transitions/background-transitions.html
bug 114206
(author:
simon.fraser@apple.com
) http/tests/security/mixedContent/redirect-https-to-http-iframe-in-main-frame.html
bug 114208
(authors:
abarth@webkit.org
and
rniwa@webkit.org
) fast/loader/javascript-url-in-object.html
bug 114210
(authors:
rniwa@webkit.org
and
sam@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2013-04-09 07:46:47 PDT
Comment on
attachment 197099
[details]
Patch Clearing flags on attachment: 197099 Committed
r148024
: <
http://trac.webkit.org/changeset/148024
>
WebKit Commit Bot
Comment 5
2013-04-09 07:46:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug