[BlackBerry] InputHandler: fix calls to HTMLInputElement methods https://bugs.webkit.org/show_bug.cgi?id=114283

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-04-09
Reviewed by Rob Buis.

Fix calls with wrong names.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::convertInputType):

Canonical link: https://commits.webkit.org/132649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148024 268f45cc-cd09-0410-ab3c-d52691b4dbfc